--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 ###> idea ###
 .idea/
 ###< idea ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
