--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,22 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Services\API\LOL\LeagueApi:
+        public: true
+
+    App\Services\API\LOL\StatusApi:
+        public: true
+
+    App\Services\API\LOL\SummonerApi:
+        public: true
+
+    App\Services\API\LOL\ChampionRotationApi:
+        public: true
+
+    App\Services\API\LOL\ChampionMasteryApi:
+        public: true
+
     App\Services\API\LOL\BaseApi:
         arguments:
+            $platform : '%env(string:PLATFORM)%'
             $apiKey: '%env(string:APIKEY)%'
