--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Services\API\LOL\MatchApi:
+        public: true
+
     App\Services\API\LOL\LeagueApi:
         public: true
 
